[workspace]
members = [
	"operator-history-core",
	"operator-history-program",
	"operator-history-sdk"
]
resolver = "2"

[workspace.dependencies]
bytemuck = { version = "1.16.3", features = ["derive", "min_const_generics"] }
jito-account-traits-derive = { package = "jito-account-traits-derive", git = "https://github.com/jito-foundation/restaking", rev = "175b594f24c8913448942685c7345f7521dd0a41" }
jito-bytemuck = { package = "jito-bytemuck", git = "https://github.com/jito-foundation/restaking", rev = "175b594f24c8913448942685c7345f7521dd0a41" }
shank = "0.4.2"
shank_idl = "0.4.2"
solana-account-info = "~2.2"
solana-msg = "~2.2"
solana-program-error = "~2.2"
solana-pubkey = "~2.2"
