[workspace]
members = [
	"core",
	"program",
	"sdk"
]
resolver = "2"

[workspace.dependencies]
borsh = { version = "0.10.3" }
bytemuck = { version = "1.16.3", features = ["derive", "min_const_generics"] }
jito-account-traits-derive = { package = "jito-account-traits-derive", git = "https://github.com/jito-foundation/restaking", rev = "175b594f24c8913448942685c7345f7521dd0a41" }
jito-bytemuck = { package = "jito-bytemuck", git = "https://github.com/jito-foundation/restaking", rev = "175b594f24c8913448942685c7345f7521dd0a41" }
jito-jsm-core = { package = "jito-jsm-core", git = "https://github.com/jito-foundation/restaking", rev = "175b594f24c8913448942685c7345f7521dd0a41" }
jito-restaking-core = { package = "jito-restaking-core", git = "https://github.com/jito-foundation/restaking", rev = "175b594f24c8913448942685c7345f7521dd0a41" }
jito-restaking-program = { package = "jito-restaking-program", git = "https://github.com/jito-foundation/restaking", rev = "175b594f24c8913448942685c7345f7521dd0a41", features = ["no-entrypoint"] }
jito-restaking-sdk = { package = "jito-restaking-sdk", git = "https://github.com/jito-foundation/restaking", rev = "175b594f24c8913448942685c7345f7521dd0a41" }
jito-vault-program = { package = "jito-vault-program", git = "https://github.com/jito-foundation/restaking", rev = "175b594f24c8913448942685c7345f7521dd0a41", features = ["no-entrypoint"] }
operator-history-core = { path = "core", version = "0.1.0" }
operator-history-sdk = { path = "sdk", version = "0.1.0" }
shank = "0.4.2"
shank_idl = "0.4.2"
solana-account = "2.2.1"
solana-account-info = "2.2.1"
solana-commitment-config = "2.2.1"
solana-decode-error = "2.2.1"
solana-instruction = "2.2.1"
solana-invoke = "0.2.0"
solana-keypair = "2.2.1"
solana-msg = "2.2.1"
solana-native-token = "2.2.1"
solana-program = "2.2.1"
solana-program-entrypoint = "2.2.1"
solana-program-error = "2.2.1"
solana-program-test = "2.2.1"
solana-pubkey = "2.2.1"
solana-rent = "2.2.1"
solana-signature = "2.2.1"
solana-signer = "2.2.1"
solana-system-interface = "1.0"
solana-sysvar = "2.2.1"
solana-transaction = "2.2.1"
test-case = "3.3"
thiserror = "1.0.57"
tokio = { version = "1.46.1", features = ["macros"] }

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
