[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
mollusk-svm = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-system-interface = { workspace = true }

[lints]
workspace = true
