[package]
name = "operator-history-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { workspace = true }
jito-account-traits-derive = { workspace = true }
jito-bytemuck = { workspace = true }
operator-history-sdk = { workspace = true }
shank = { workspace = true }
shank_idl = { workspace = true }
solana-account-info = { workspace = true }
solana-msg = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
