[package]
name = "operator-history-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "operator_history_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
default = []
mainnet-beta = []
testnet = []
devnet = []
localhost = []
test-sbf = []

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
jito-account-traits-derive = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-restaking-core = { workspace = true }
operator-history-core = { workspace = true }
operator-history-sdk = { workspace = true }
solana-account-info = { workspace = true }
solana-decode-error = { workspace = true }
solana-invoke = { workspace = true }
solana-msg = { workspace = true }
solana-program = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-system-interface = { workspace = true }
solana-sysvar = { workspace = true }

[dev-dependencies]
jito-restaking-program = { workspace = true }
jito-restaking-sdk = { workspace = true }
jito-vault-program = { workspace = true }
solana-account = { workspace = true }
solana-commitment-config = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-native-token = { workspace = true }
solana-program-test = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
test-case = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
