[package]
name = "operator-history-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { workspace = true }
shank = { workspace = true }
solana-decode-error = { workspace = true }
solana-instruction = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-system-interface = { workspace = true }
thiserror = { workspace = true }
